--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -2,7 +2,7 @@
     <%- include("logo") %>
     <div class="nav-options">
         <p class="pt">Português(BR) - BRL</p>
-        <button class="signup">Sign Up</button>
+        <a href="../cadastro" class="signup">Sign Up</a>
         <p class="separador">|</p>
         <img src="/img/login.png" alt="Logar">
         <img src="/img/carrinho.png" alt="Carrinho">
