--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,7 +19,7 @@
     <script defer src="/scripts/owl/owl.carousel.min.js"></script>
     <script defer src="/scripts/owl/config-index.js"></script>
 
-    <title>Página inicial</title>
+    <title> <%- title %> </title>
   </head>
   <body>
     <header><%- include("./includes/header") %></header>
