--- a/views/monteSeuPc.ejs
+++ b/views/monteSeuPc.ejs
@@ -18,7 +18,7 @@
     <script defer src="/scripts/owl/owl.carousel.min.js"></script>
     <script defer src="/scripts/owl/config-monteSeuPc.js"></script>
 
-    <title>Monte seu pc</title>
+    <title> <%- title %> </title>
 </head>
 <body>
     <header><%- include("./includes/header") %></header>
