--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -16,87 +16,70 @@
 
     <script defer src="https://kit.fontawesome.com/6837938f61.js" crossorigin="anonymous"></script>
 
-    <title>Document</title>
+    <title> <%- title %> </title>
 </head>
 <body>
     <header><%- include("./includes/header") %></header>
 
-    <h1>Cadastro</h1>
-    
-    <section class="containerl">
+    <h1>CADASTRO</h1>
+    <main>
+        <section class="containerl">
 
-            <div class="opcao">
+                <div class="opcao">
 
-                <button><p>Pessoa Fisica</p></button>
-                <button><p>Pessoa Juridica</p></button>
+                    <button class="option__active"><p>Pessoa Física</p></button>
+                    <button><p>Pessoa Jurídica</p></button>
 
-            </div>
+                </div>
 
-        <div class="formulario">
-                    
+            <div class="formulario">
+                        
                 <div class="triangle-down"></div>
                 <h2>Insira seus dados</h2>
 
-            <form action="">
-
-                <div class="caixa1">
-
-                    <label for="nome"></label>
-                    <input type="text" id="nome" name="nome" placeholder="Nome">
-            
-                    <label for="sobrenome"></label>
-                    <input type="text" id="sobrenome" name="sobrenome" placeholder="Sobrenome">
-
-                </div>
-
-                    <label for="email"></label>
-                    <input type="email" id="email" name="email" placeholder="Email" required>
-
-                <div class="caixa2">
-
-                    <label for="dataDeNascimento"></label>
-                    <input type="text" id="dataDeNascimento" name="dataDeNascimento" placeholder="Data de Nascimento">
-
-                    <label for="genero"></label>
-                    <input type="text" id="genero" name="genero" placeholder="Gênero">
-
-                </div>   
-            
-                <div class="caixa3">
+                <form action="">
+                    <div class="caixa">
+                        <label for="nome"></label>
+                        <input type="text" id="nome" name="nome" placeholder="Nome">
                 
-                    <label for="cpf"></label>
-                    <input type="text" id="cpf" name="cpf" placeholder="CPF">
+                        <label for="sobrenome"></label>
+                        <input type="text" id="sobrenome" name="sobrenome" placeholder="Sobrenome">
+                    </div>
 
-                    <label for="telefone"></label>
-                    <input type="text" id="telefone" name="telefone" placeholder="Telefone">
+                        <label for="email"></label>
+                        <input type="email" id="email" name="email" placeholder="Email" required>
 
-                </div>
+                    <div class="caixa">
+                        <label for="dataDeNascimento"></label>
+                        <input type="text" id="dataDeNascimento" name="dataDeNascimento" placeholder="Data de Nascimento">
 
-                    <label for="senha"></label>
-                    <input type="password" id="senha" name="senha" placeholder="Senha">
+                        <label for="genero"></label>
+                        <input type="text" id="genero" name="genero" placeholder="Gênero">
+                    </div>   
+                
+                    <div class="caixa">
+                        <label for="cpf"></label>
+                        <input type="text" id="cpf" name="cpf" placeholder="CPF">
 
-                <div class="termos">
+                        <label for="telefone"></label>
+                        <input type="text" id="telefone" name="telefone" placeholder="Telefone">
+                    </div>
 
-                    <input type="checkbox" id="checkbox" name="checkbox">
-                    <p>Receber novidades e promoções por e-mail</p>
+                        <label for="senha"></label>
+                        <input type="password" id="senha" name="senha" placeholder="Senha">
 
-                </div>
+                    <div class="termos">
+                        <input type="checkbox" id="checkbox" name="checkbox">
+                        <label for="checkbox">Receber novidades e promoções por e-mail</label>
+                    </div>
 
-                <p class="politica">Ao criar uma conta, você está de acordo com nossa <strong>política de privacidade.</strong></p>
+                    <p class="politica">Ao criar uma conta, você está de acordo com nossa <strong>política de privacidade.</strong></p>
+                    <button class="cadastrar">Cadastrar</button>
 
-                <button class="cadastrar"><p>Cadastrar</p></button>
-
-            </form>
-        
-
-            
-        </div>
-        
-
-    </section>
-    
-
-
+                </form>
+            </div>
+        </section>
+    </main>
 
     <footer><%- include("./includes/footer") %></footer>
 </body>
