--- a/views/includes/logo.ejs
+++ b/views/includes/logo.ejs
@@ -1,7 +1,9 @@
-<div class="deconstructed">
-    >SetupGamer
-    <div>>SetupGamer</div>
-    <div>>SetupGamer</div>
-    <div>>SetupGamer</div>
-    <div>>SetupGamer</div>
-</div>
+<a class="logo" href="../">
+    <div class="deconstructed">
+        >SetupGamer
+        <div>>SetupGamer</div>
+        <div>>SetupGamer</div>
+        <div>>SetupGamer</div>
+        <div>>SetupGamer</div>
+    </div>
+</a>
