--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -16,15 +16,21 @@ h1, h2 {
 }
 
 /*********** Header ***********/
+header {
+    position: sticky;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 100;
+}
+
 nav {
     width: 100%;
     height: 8vh;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    z-index: 3;
-    top: 0;
-    left: 0;
+    background-color: #242424;
 }
 
 .nav-options{
@@ -78,7 +84,6 @@ div.menu-bar ul {
     margin: 0;
     padding: 0;
     background-color: rgba(87, 87, 87, 0.719);
-    opacity: 0.4;
     box-shadow: 0px 4px 10px rgb(0, 0, 0);
 }
   
