Criando modal de login

--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -2,10 +2,10 @@
     <%- include("logo") %>
     <div class="nav-options">
         <p class="pt">Português(BR) - BRL</p>
-        <a href="../cadastro" class="signup">Sign Up</a>
+        <a href="../cadastro" class="signup">Cadastar-se</a>
         <p class="separador">|</p>
-        <img src="/img/login.png" alt="Logar">
-        <img src="/img/carrinho.png" alt="Carrinho">
+        <a href="#modal"><img src="/img/login.png" alt="Logar"></a>
+        <a href=""><img src="/img/carrinho.png" alt="Carrinho"></a>
     </div>
 </nav>
 <div class="menu-bar">
@@ -30,3 +30,6 @@
         </li>
     </ul>
 </div>
+
+<!--modal-->
+<%- include('login') %> 
