--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/stylesheets/style.css" />
     <link rel="stylesheet" href="/stylesheets/logo.css" />
     <link rel="stylesheet" href="/stylesheets/index.css" />
+    <link rel="stylesheet" href="/stylesheets/login.css" />
     <link rel="stylesheet" href="/stylesheets/owl/owl.carousel.min.css" />
     <link rel="stylesheet" href="/stylesheets/owl/owl.theme.default.min.css" />
 
