--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -21,7 +21,7 @@ header {
     width: 100%;
     top: 0;
     left: 0;
-    z-index: 100;
+    z-index: 20;
 }
 
 nav {
@@ -77,13 +77,127 @@ header nav img {
     position: relative;
     cursor: pointer;
 }
-  
+
+/*********** Modal ***********/
+.modal {
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.603);
+    display: grid;
+    place-content: center;
+    visibility: hidden;
+}
+
+.modal:target {
+    visibility: visible;
+}
+
+.modal__content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 50vh;
+    width: 30vw;
+    background-image: linear-gradient(
+        180deg,
+        #242424 85%,
+        #35C910 100%
+    );
+    box-shadow: 0px 0px 15px 5px black;
+}
+
+.modal__link {
+    align-self: flex-end;
+    margin: 0.5vh 0.4vw;
+    text-decoration: none;
+    color: #4e4e4eaf;
+    font-size: 2vh;
+}
+
+.modal__title {
+    margin-top: 1vh;
+    margin-bottom: 0;
+    color: white;
+}
+
+.modal__description {
+    width: 100%;
+    color: white;
+    padding-bottom: 1vh;
+    margin-bottom: 3vh;
+    border-bottom: solid 1px #35C910;
+}
+
+.form-group {
+    position: relative;
+}
+
+.form-style{
+    margin-top: 1vh;
+    width: 18vw;
+    height: 4vh;
+    padding-left: 3vw;
+    font-size: 1.5vh;
+    font-weight: 700;
+    border: none;
+    border-radius: 4px;
+    background-color: #4e4e4eaf;
+    color: white;
+    outline: none;
+    box-shadow: 0 4px 8px 0 rgb(21, 21, 21);
+}
+
+.form-group .fas {
+    position: absolute;
+    top: 0;
+    left: 1vw;
+    font-size: 2vh;
+    line-height: 6vh;
+    text-align: left;
+    color: #35C910;
+    text-align: left;
+}
+
+.form-login {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.senha-link {
+    position: relative;
+    margin-top: 0.5vh;
+    right: 7vw;
+    color: white;
+    font-size: 1.4vh;
+    text-decoration: none;
+}
+
+.form-login button {
+    margin-top: 5vh;
+    padding: 1.5vh 1.5vw;
+    background-color: #35C910;
+    font-size: 1.5vh;
+    font-weight: 600;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.cadastro-link {
+    margin-top: 1vh;
+    color: white;
+    text-decoration: none;
+}
+
+/*********** Menu Bar ***********/  
 div.menu-bar ul {
     display: flex;
     justify-content: space-evenly;
     margin: 0;
     padding: 0;
-    background-color: rgba(87, 87, 87, 0.719);
+    background-color: rgb(87, 87, 87);
     box-shadow: 0px 4px 10px rgb(0, 0, 0);
 }
   
