--- a/views/lancamento.ejs
+++ b/views/lancamento.ejs
@@ -26,85 +26,84 @@
     <header>
         <%- include('./includes/header')%>
     </header>
-
-    <section class="owl-Carousel">
-        <div id="owl-Carousel" class="carousel slide-fluid" data-bs-ride="carousel">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img class="bd-placeholder-img" src="https://i.postimg.cc/XJ1kFfXX/combo-gamer1.png" alt="">
-                    <rect width="100%" height="100%"></rect>
-                    <div class="container">
-                        <div class="carousel-caption text-start">
-                            <h2>Sorme epresentative placeholder 
-                               <br> content for first slide.</h2>
-                            <button type="button" class="btn btn-success">Comprar</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img class="bd-placeholder-img" src="https://i.postimg.cc/X7grxCTd/slide2.jpg" alt="">
-                    <rect width="100%" height="100%"></rect>
-                    <div class="container">
-                        <div class="carousel-caption text-start">
-                            <h2>Sorme epresentative placeholder 
+    <main>
+        <section class="owl-Carousel">
+            <div id="owl-Carousel" class="carousel slide-fluid" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="bd-placeholder-img" src="https://i.postimg.cc/XJ1kFfXX/combo-gamer1.png" alt="">
+                        <rect width="100%" height="100%"></rect>
+                        <div class="container">
+                            <div class="carousel-caption text-start">
+                                <h2>Sorme epresentative placeholder 
                                 <br> content for first slide.</h2>
-                            <button type="button" class="btn btn-success">Comprar</button>
+                                <button type="button" class="btn btn-success">Comprar</button>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="carousel-item">
-                    <img class="bd-placeholder-img" src="https://i.postimg.cc/FKY19n1V/slide3.jpg" alt="">
-                    <rect width="100%" height="100%"></rect>
-                    <div class="container">
-                        <div class="carousel-caption text-start">
-                            <h2>Sorme epresentative placeholder 
-                                <br> content for first slide.</h2>
-                            <button type="button" class="btn btn-success">Comprar</button>
+                    <div class="carousel-item">
+                        <img class="bd-placeholder-img" src="https://i.postimg.cc/X7grxCTd/slide2.jpg" alt="">
+                        <rect width="100%" height="100%"></rect>
+                        <div class="container">
+                            <div class="carousel-caption text-start">
+                                <h2>Sorme epresentative placeholder 
+                                    <br> content for first slide.</h2>
+                                <button type="button" class="btn btn-success">Comprar</button>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="carousel-item">
-                    <img class="bd-placeholder-img" src="https://i.postimg.cc/Y2ywfqS8/slide4.jpg" alt="">
-                    <rect width="100%" height="100%"></rect>
-                    <div class="container">
-                        <div class="carousel-caption text-start">
-                            <h2>Sorme epresentative placeholder 
-                                <br> content for first slide.</h2>
-                            <button type="button" class="btn btn-success">Comprar</button>
+                    <div class="carousel-item">
+                        <img class="bd-placeholder-img" src="https://i.postimg.cc/FKY19n1V/slide3.jpg" alt="">
+                        <rect width="100%" height="100%"></rect>
+                        <div class="container">
+                            <div class="carousel-caption text-start">
+                                <h2>Sorme epresentative placeholder 
+                                    <br> content for first slide.</h2>
+                                <button type="button" class="btn btn-success">Comprar</button>
+                            </div>
                         </div>
                     </div>
+                    <div class="carousel-item">
+                        <img class="bd-placeholder-img" src="https://i.postimg.cc/Y2ywfqS8/slide4.jpg" alt="">
+                        <rect width="100%" height="100%"></rect>
+                        <div class="container">
+                            <div class="carousel-caption text-start">
+                                <h2>Sorme epresentative placeholder 
+                                    <br> content for first slide.</h2>
+                                <button type="button" class="btn btn-success">Comprar</button>
+                            </div>
+                        </div>
+                    </div>
+                    ::after
                 </div>
-                ::after
+                <button class="carousel-control-prev" type="button" data-bs-target="#owl-Carousel" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#owl-Carousel" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#owl-Carousel" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#owl-Carousel" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
-        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    </section>
+            <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+        </section>
 
-    <section class="video">
-        <div class="container">
-            <iframe 
-            width="560"
-            height="315"
-            src="https://www.youtube.com/watch?v=62yMv-uyTaI"
-            title="The Razer Workstation Setup"
-            frameborder="0"
-            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen></iframe>
-        </div>
-    </section>
-
-    <footer>
-        <%- include('./includes/footer')%>
-    </footer>
+        <section class="video">
+            <div class="container">
+                <iframe 
+                width="560" 
+                height="315" 
+                src="https://www.youtube.com/embed/62yMv-uyTaI?autoplay=1&mute=1&controls=0" 
+                title="YouTube video player" 
+                frameborder="0" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                allowfullscreen
+                ></iframe>
+            </div>
+        </section>
+    </main>
+    <footer><%- include('./includes/footer')%></footer>
 </body>
 
 </html>
