--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -229,7 +229,7 @@ footer img.banner {
     height: 12vh;
 }
 
-footer div.container {
+footer div.container1 {
     display: flex;
     flex-direction: column;
 }
