--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container1">
     <img src="/img/farcry-banner.jpg" class="banner" alt="FarCry6 ">
     <div class="receber-emails">
         <h2>Receba novidades e promoções</h2>
