--- a/views/lancamento.ejs
+++ b/views/lancamento.ejs
@@ -107,7 +107,14 @@
             <div class="container">
                 <div>
                     <img src="https://i.postimg.cc/TYfsTYXH/gabineteprin.jpg">
-                    <h3>Setup NXZT</h3>
+                    <div class="description">
+                    <h3>Lorem ipsum dolor sit amet</h3>
+                    <p>onsectetur adipiscing elit, sed do eiusmod tempor incididunt
+                    <br> ut labore et dolore magna.
+                    Ut enim ad minim veniam, quis nostrud 
+                    <br> exercitation ullamco laboris.</p>
+                    <button type="button" class="btn btn-success">Comprar</button>
+                    </div>
                 </div>
             </div>
         </section>
