--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -12,7 +12,7 @@
 
 .carousel .carousel__item img {
     width: 100%;
-    height: 40vh;
+    height: 57vh;
 }
 
 .carousel .carousel__item--visible {
@@ -34,15 +34,20 @@
     background: none;
     cursor: pointer;
     font-size: 4vh;
+    color: rgb(138, 138, 138);
+    transition: 0.4s;
+}
+
+.carousel .carousel__actions button:hover {
     color: white;
 }
 
 .carousel .carousel__actions button[data-js="carousel__button--prev"] {
-    margin-left: 20px;
+    margin-left: 100px;
 }
 
 .carousel .carousel__actions button[data-js="carousel__button--next"] {
-    margin-right: 20px;
+    margin-right: 100px;
 }
 
 @keyframes fadeVisibility {
