--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -233,6 +233,11 @@ section.video {
     margin-bottom: 7vh;
 }
 
+.video iframe {
+    height: 25rem;
+    width: 35rem;
+}
+
 /*********** Midias sociais ***********/
 section.midias-sociais {
     display: flex;
@@ -244,7 +249,7 @@ section.midias-sociais {
 
 section.midias-sociais a {
     background-color: white;
-    padding: 7vh;
+    padding: 7vh 7vw;
     box-shadow: 0px 0px 10px 0px black;
 }
 
@@ -266,6 +271,12 @@ section.midias-sociais a:hover {
 @media (max-width: 530px) {
     .card .face.face2 {
         height: 5vh;
+    }
+}
+
+@media (max-width: 564px) {
+    .video iframe {
+        width: 20rem;
     }
 }
 
