--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -242,7 +242,7 @@ footer div.container1 {
 
 .receber-emails h2 {
     color: white;
-    font-size: 1.5vmax;
+    font-size: 2.5vh;
     margin-left: 11%;
     margin-top: 0;
 }
@@ -254,7 +254,7 @@ footer div.container1 {
 .receber-emails input {
     height: 4vh;
     width: 10vw;
-    font-size: 1.1vw;
+    font-size: 2vh;
     border: none;
     border-radius: 4px;
 }
@@ -265,7 +265,7 @@ footer div.container1 {
     background-color: #35C910;
     border: none;
     border-radius: 4px;
-    font-size: 1.1vw;
+    font-size: 2vh;
     cursor: pointer;
 }
 
