--- a/public/stylesheets/sobrenos.css
+++ b/public/stylesheets/sobrenos.css
@@ -1,4 +1,3 @@
-
 :root {
     --white: #fff;
     --black: #111;
@@ -27,7 +26,7 @@ form {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: var(--black2);
+    background-color: var(--);
     width: 70%;
     margin-left: 15%;
     padding-bottom: 5%;
@@ -91,7 +90,6 @@ main button:focus {
 .caixa {
     width: 100%;
     display: flex;
-    color: white;
     justify-content: flex-start;
 }
 
@@ -109,6 +107,64 @@ main input {
     width: 12vw;
 }
 
+main input#email {
+    width: 100%;
+}
+
+main input#senha {
+    width: 100%;
+}
+
+main input:focus {
+    outline: 0;
+}
+
+main input::placeholder {
+    font-size: 1.7vh;
+}
+
+.termos label {
+    font-size: 1.7vh;
+}
+
+.termos {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    margin-top: 2vh;
+}
+
+.termos input {
+    margin: 0 3px 0 0;
+    padding: 0;
+    width: 1vw;
+}
+
+main strong {
+    color: var(--green);
+}
+
+.formulario form .politica {
+    width: 100%;
+    text-align: left;
+    font-size: 1.7vh;
+}
+
+button.cadastrar {
+    margin-top: 2vh;
+    padding: 2vh 1.5vw;
+    font-size: 1.6vh;
+    border-radius: 11px;
+    background-color: var(--green);
+    border: none;
+    cursor: pointer;
+}
+
+button.cadastrar:hover {
+    background-color: #1e7209d7;
+    color: white;
+    border-color: #1e7209d8;
+}
 
 @media screen and (max-width: 768px) {
     section, aside {
