--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -13,12 +13,12 @@
         <div class="footer-info">
             <ul class="Institucional">
                 <h3>Institucional</h3>
-                <li>Sobre nós</li>
-                <li>Política de privacidade</li>
-                <li>Termos de serviço</li>
-                <li>Formas de pagamento e envio</li>
-                <li>Garantia, troca e devolução</li>
-                <li>Fale conosco</li>
+                <li><a href="">Sobre nós</a></li>
+                <li><a href="">Política de privacidade</a></li>
+                <li><a href="">Termos de serviço</a></li>
+                <li><a href="">Formas de pagamento e envio</a></li>
+                <li><a href="">Garantia, troca e devolução</a></li>
+                <li><a href="../contato">Fale conosco</a></li>
             </ul>
             <ul>
                 <h3>Atendimento</h3>
