--- a/views/lancamento.ejs
+++ b/views/lancamento.ejs
@@ -19,7 +19,7 @@
     <script defender src="/scripts/bootstrap/bootstrap.min.js"></script>
 
 
-    <title>SetupGamer</title>
+    <title> <%- title %>  </title>
 </head>
 
 <body>
