Arrumando responsividade do footer

--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -13,7 +13,7 @@
         <div class="footer-info">
             <ul class="Institucional">
                 <h3>Institucional</h3>
-                <li><a href="../sobreNos.ejs">Sobre nós</a></li>
+                <li><a href="../sobreNos">Sobre nós</a></li>
                 <li><a href="">Política de privacidade</a></li>
                 <li><a href="">Termos de serviço</a></li>
                 <li><a href="">Formas de pagamento e envio</a></li>
