--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -11,7 +11,7 @@
 <div class="menu-bar">
     <ul>
         <li>
-          <a href="#">A SetupGamer</a>
+          <a href="../sobrenos">A SetupGamer</a>
         </li>
         <li>
           <a href="#">Pc's gamers</a>
