Criando html institucional, criando rotas de opções de institucionais e controller

--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -14,10 +14,10 @@
             <ul class="Institucional">
                 <h3>Institucional</h3>
                 <li><a href="../sobreNos">Sobre nós</a></li>
-                <li><a href="">Política de privacidade</a></li>
-                <li><a href="">Termos de serviço</a></li>
-                <li><a href="">Formas de pagamento e envio</a></li>
-                <li><a href="">Garantia, troca e devolução</a></li>
+                <li><a href="../institucional/politica-privacidade">Política de privacidade</a></li>
+                <li><a href="../institucional/termos-servico">Termos de serviço</a></li>
+                <li><a href="../institucional/formas-pagamento-envio">Formas de pagamento e envio</a></li>
+                <li><a href="../institucional/garantia-troca-devolucao">Garantia, troca e devolução</a></li>
                 <li><a href="../contato">Fale conosco</a></li>
             </ul>
             <ul>
