--- a/views/contato.ejs
+++ b/views/contato.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -43,7 +43,7 @@
                     </div>
 
                     <label for="mensagem"></label>
-                    <input type="text" id="mensagem" name="mensagem" placeholder="Mensagem">
+                    <textarea name="mensagem" id="mensagem" placeholder="Escreva aqui sua dúvida ou feedback"></textarea>
 
                     <button>Enviar</button>
                 </form>
