--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -189,7 +189,6 @@
           <a href="#"><i class="fab fa-facebook"></i></i></a>
           <a href="#"><i class="fab fa-twitter-square"></i></i></a>
           <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-github"></i></i></a>
         </div>
       </section>
     </main>
