--- a/public/stylesheets/sobrenos.css
+++ b/public/stylesheets/sobrenos.css
@@ -7,26 +7,11 @@
     --gray2: #c4c4c4;
 }
 
-/*.containerl {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-
-}*/
-
-form {
-    margin-top: 2em;
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
 .formulario {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: var(--);
+    background-color: var(--black2);
     width: 70%;
     margin-left: 15%;
     padding-bottom: 5%;
@@ -52,26 +37,6 @@ h1 {
     opacity: 50%;
 }
 
-
-.opcao {
-    display: flex;
-    justify-content: center;
-}
-
-.opcao button {
-    display: flex;
-    justify-content: center;
-    width: 35%;
-    color: var(--white);
-    background: none;
-    cursor: pointer;
-    border: none;
-}
-
-.opcao p {
-    font-size: 2vh;
-}
-
 main h2 {
     position: absolute;
     display: flex;
@@ -82,92 +47,24 @@ main h2 {
     padding-top: 1%;
 }
 
-main button:focus {
-    border: none;
-    border-bottom: 2px solid var(--green)
-}
-
 .caixa {
-    width: 100%;
-    display: flex;
-    justify-content: flex-start;
+    margin: 5vh 5vw;
+    margin-bottom: 0;
+    color: #fff;
 }
 
-.caixa input:nth-of-type(1) {
-    margin-right: 30%;
-}
-
-main input {
-    background-color: var(--black2);
-    border: none;
-    color: var(--white);
-    border-bottom: 1px solid var(--gray);
-    margin: 25px 0;
-    background: none;
-    width: 12vw;
-}
-
-main input#email {
-    width: 100%;
-}
-
-main input#senha {
-    width: 100%;
-}
-
-main input:focus {
-    outline: 0;
-}
-
-main input::placeholder {
-    font-size: 1.7vh;
-}
-
-.termos label {
-    font-size: 1.7vh;
-}
-
-.termos {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    margin-top: 2vh;
-}
-
-.termos input {
-    margin: 0 3px 0 0;
-    padding: 0;
-    width: 1vw;
-}
-
-main strong {
-    color: var(--green);
-}
-
-.formulario form .politica {
-    width: 100%;
-    text-align: left;
-    font-size: 1.7vh;
-}
-
-button.cadastrar {
-    margin-top: 2vh;
-    padding: 2vh 1.5vw;
-    font-size: 1.6vh;
-    border-radius: 11px;
-    background-color: var(--green);
-    border: none;
-    cursor: pointer;
-}
-
-button.cadastrar:hover {
-    background-color: #1e7209d7;
-    color: white;
-    border-color: #1e7209d8;
-}
-
-@media screen and (max-width: 768px) {
-    section, aside {
+@media (max-width: 690px) {
+    .triangle-down {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        border: none;
+        height: 5vh;
         width: 100%;
+        background-color: #35c910;
+    }
+
+    main h2 {
+        padding-top: 0;
     }
 }
