--- a/views/sobrenos.ejs
+++ b/views/sobrenos.ejs
@@ -7,12 +7,7 @@
     
         <link rel="stylesheet" href="/stylesheets/style.css" />
         <link rel="stylesheet" href="/stylesheets/logo.css" />
-        <link rel="stylesheet" href="/stylesheets/index.css" />
-        <link rel="stylesheet" href="/stylesheets/cadastro.css" />
-        
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="/stylesheets/sobrenos.css" />
     
         <script defer src="https://kit.fontawesome.com/6837938f61.js" crossorigin="anonymous"></script>
     
@@ -24,20 +19,17 @@
         <h1>A SetupGamer</h1>
         <main>
             <section class="containerl">
-    
-                   
                 <div class="formulario">
-                            
                     <div class="triangle-down"></div>
-                    <h2>Como Surgiu?</h2>
-    
-                    <form action="">
-                        <div class="caixa">
-                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat quos nisi aliquam ea distinctio consectetur harum, laboriosam id quisquam quo eligendi. Eius ad officia expedita facere ipsa, cupiditate dolor maxime?</p>
-     
-                    
-                            
-                    </form>
+
+                    <h2>Nossa História</h2>
+
+                    <div class="caixa">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugiat quos nisi aliquam ea distinctio 
+                            consectetur harum, laboriosam id quisquam quo eligendi. Eius ad officia expedita facere ipsa, cupiditate dolor maxime?
+                        </p>
+                    </div>
                 </div>
             </section>
         </main>
