--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -300,7 +300,7 @@ footer .institucional {
 
 footer div.footer-info ul {
     list-style: none;
-    font-size: 1.1vmax;
+    font-size: 2vmin;
     color: white;
 }
 
