--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -13,7 +13,7 @@
         <div class="footer-info">
             <ul class="Institucional">
                 <h3>Institucional</h3>
-                <li><a href="../sobreNos">Sobre nós</a></li>
+                <li><a href="../sobre-nos">Sobre nós</a></li>
                 <li><a href="../institucional/politica-privacidade">Política de privacidade</a></li>
                 <li><a href="../institucional/termos-servico">Termos de serviço</a></li>
                 <li><a href="../institucional/formas-pagamento-envio">Formas de pagamento e envio</a></li>
