--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -11,7 +11,7 @@
 <div class="menu-bar">
     <ul>
         <li>
-          <a href="../sobrenos">A SetupGamer</a>
+          <a href="../sobre-nos">A SetupGamer</a>
         </li>
         <li>
           <a href="#">Pc's gamers</a>
@@ -26,7 +26,7 @@
             <a href="#">Peças</a>
         </li>
         <li>
-            <a href="../monteSeuPc">Monte seu pc</a>
+            <a href="../monte-seu-pc">Monte seu pc</a>
         </li>
     </ul>
 </div>
