--- a/views/index.ejs
+++ b/views/index.ejs
@@ -68,6 +68,7 @@
 
       <!--Categorias-->
       <section class="categories">
+        <h2>Categorias</h2>
         <div class="container1">
           <div class="card">
             <div class="face face1">
@@ -139,6 +140,7 @@
 
       <!--Carrossel de produtos-->
       <section class="carrossel-filmes">
+        <h2>Escolha o PC que mais combina com você</h2>
         <div class="owl-carousel owl-theme">
           <div class="item">
             <img src="/img/produtos/gabinete1.jpg" alt="" />
