Ajustando bug da opção de cartão de credito na forma de pagamento

--- a/public/stylesheets/pagamento.css
+++ b/public/stylesheets/pagamento.css
@@ -125,13 +125,9 @@ input[type="radio"]:checked::before {
     align-items: center;
 }
 
-#painel-cartao {
-    display: flex;
-    justify-content: center;
-}
-
 #painel-cartao form {
     width: 35%;
+    margin-left: 33%;
 }
 
 #painel-cartao label {
