Criando página de categorias

--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -14,7 +14,7 @@
           <a href="../sobre-nos">A SetupGamer</a>
         </li>
         <li>
-          <a href="#">Pc's gamers</a>
+          <a href="../categorias#pcs-gold">Pc's gamers</a>
         </li>
         <li>
           <a href="#">WorkStation</a>
