Criando tabela usuario e testando base64

--- a/views/carrinhoDeCompra.ejs
+++ b/views/carrinhoDeCompra.ejs
@@ -25,7 +25,7 @@
                     <div class="produtoSelecionado">
                         <ul>
                             <li>
-                                <article></article> <!--colocar border-bottom que ele sempre separa-->
+                                <article></article> <!--colocar border-bottom que ele sempre separará quando usarmos o FOR-->
                             </li>
                         </ul>
                     </div>
