--- a/views/endereco.ejs
+++ b/views/endereco.ejs
@@ -40,12 +40,12 @@
 
                 <div>
                     <label for="numero">Número</label>
-                    <input name="numero" type="text" placeholder="Número da residência">
+                    <input name="numero" type="text" placeholder="Nº da residência">
                 </div>
 
                 <div>
                     <label for="complemento">Complemento</label>
-                    <input name="complemento" type="text" placeholder="EX:. Nº Ap./ Ponto de referência">
+                    <input name="complemento" type="text" placeholder="EX:. Nº Ap">
                 </div>
 
                 <div>
