--- a/views/pagamento.ejs
+++ b/views/pagamento.ejs
@@ -81,7 +81,8 @@
                         
                     </form>
                 </div>
-
+            
+            <!--Mercado Pago-->
             <div class="accordion">
                 <label class="form-control">
                     <input type="radio" name="radio" />
@@ -95,7 +96,8 @@
                         
                     </p>
                 </div>
-
+            
+            <!--PayPal-->
             <div class="accordion">
                 <label class="form-control">
                     <input type="radio" name="radio" />
@@ -110,6 +112,7 @@
                     </p>
                 </div>
 
+            <!--Valor total-->
             <div class="container">
                 <p>Produto <small class="valor1">R$ 2.583,17</small></p>
                 <p>Frete <small class="valor2">R$ 69,29</small></p>
