--- a/views/frete.ejs
+++ b/views/frete.ejs
@@ -23,7 +23,7 @@
         <form action="">
             <section class="form-frete">
                 <label class="form-control">
-                    <input type="radio" name="radio" />
+                    <input type="radio" name="economico" />
                         <span>
                             <strong>PAC Econômico</strong>
                             <small>Prazo de até 14 dias úteis</small>
@@ -32,7 +32,7 @@
                 </label>
 
                 <label class="form-control">
-                    <input type="radio" name="radio" />
+                    <input type="radio" name="transportadora" />
                         <span>
                             <strong>Transportadora</strong>
                             <small>Prazo de até 15 dias úteis</small>
@@ -41,7 +41,7 @@
                 </label>
 
                 <label class="form-control">
-                    <input type="radio" name="radio" />
+                    <input type="radio" name="sedex" />
                         <span>
                             <strong>SEDEX</strong>
                             <small>Prazo de até 9 dias úteis</small>
