--- a/public/stylesheets/carrinhoDeCompra.css
+++ b/public/stylesheets/carrinhoDeCompra.css
@@ -1,5 +1,7 @@
 * {
     box-sizing: border-box;
+    padding: 0;
+    margin: 0;
 }
 :root {
     --white: #fff;
@@ -12,17 +14,144 @@
     --orange: #e39305;
 }
 
-.container {
+h1{
     display: flex;
-    justify-content: center;
-    align-items: center;
+    margin-left: 20px;
 }
-.container .separarElementos{
+
+.container {
+    display: block;
+    width: 100%;
+}
+.separarElementos{
     display: flex;
-    justify-content: space-between;
+    /*justify-content: space-between;*/
+    margin: 20px;
 }
 .produtoSelecionado {
-    width: 700px;
     height: 800px;
-    background-color: var(--orange);
+    width: 100%;
+    background-color: var(--black2);
+    margin-right: 15px;
+    border-top: var(--green) solid 5px;
+}
+.finalizarCompra{
+    display: flex;
+    justify-content: center;
+    height: 500px;
+    width: 100%;
+    background-color: var(--black2);
+    padding-top: 10px;  
+}
+.finalizarCompra form{
+    margin-bottom: 5px;
+}
+li {
+    list-style: none;
+}
+main img {
+    width: 5em;
+    height: 5em;
+}
+main article {
+    display: flex;
+    width: 100%;
+    height: auto;
+    /*align-items: center;*/
+    padding: 2em 1em;
+}
+.img {
+    display: flex;
+    align-items: center;
+    /*justify-content: center;*/
+    padding: 2vh 0;
+    width: 20%;
+
+}
+main .content{
+    width: 20%;
+}
+main .componentes{
+    padding: 0;
+}
+.produtoSelecionado ul li{
+    padding: 0;
+    
+}
+main .produto{
+    border-bottom: 1px solid var(--black2);
+}
+main .produto .a{
+    display: flex;
+    margin-left: 60%;
+    margin-bottom: 1em;
+}
+main .produto .a p{
+    margin-left: 5em;
+}   
+main .close{
+    width: 60%;
+    text-align: right;
+    
+}
+main .a input{
+        width: 10%;
+}
+main .a{
+    align-items: center;
+}
+main .finalizarCompra button{
+    background-color: var(--green);
+    padding: 1vh;
+    border: none;
+    border-radius: 8px;
+    margin-left: 2vw; 
+}
+main .finalizarCompra input{
+    color: var(--black2);
+}
+/*-----------------*/
+input[type="number"] {
+    -webkit-appearance: textfield;
+       -moz-appearance: textfield;
+            appearance: textfield;
+  }
+  input[type=number]::-webkit-inner-spin-button, 
+  input[type=number]::-webkit-outer-spin-button { 
+    -webkit-appearance: none;
+  }
+  input[type="number"]{
+  outline:none;
+  border-right: 0px;
+  border-top: 1px solid black;
+  border-left: 1px solid black;
+  border-bottom: 1px solid black;
+  height: 20px;
+  padding:1%;
+  border-right: 0 px solid black;
+  }
+  label, input, button {
+      font-size: inherit;
+      padding: 0.2em;
+      -moz-box-sizing: content-box;
+      -webkit-box-sizing: content-box;
+      box-sizing: content-box;
+}
+.a button {
+    height:20px;
+    padding:1%;
+    border-top: 1px solid black;
+    border-bottom: 1px solid black;
+    background-color: white;
+    border-left: 0px solid black;
+    padding-left:2%;
+    padding-right:2%;
+    outline:none;
+    cursor: pointer;   
+}
+button.menos{
+    border-right: 0px solid black;
+}
+button.mais{
+    border-right: 1px solid black;
 }
