adicionado required nos input de login, criado arquivo de script de validação e corrigido alguns campos do middleware campoValidacao.js

--- a/views/includes/login.ejs
+++ b/views/includes/login.ejs
@@ -11,12 +11,12 @@
 
         <form action="" class="form-login">
             <div class="form-group">
-                <input type="email" name="logemail" class="form-style" placeholder="E-mail" id="logemail" autocomplete="off">
+                <input type="email" name="logemail" class="form-style" placeholder="E-mail" id="logemail" autocomplete="off" required> 
                 <i class="fas fa-at"></i>
             </div>	
 
             <div class="form-group">
-                <input type="password" name="logpass" class="form-style" placeholder="Senha" id="logpass" autocomplete="off">
+                <input type="password" name="logpass" class="form-style" placeholder="Senha" id="logpass" autocomplete="off" required>
                 <i class="fas fa-lock"></i>
             </div>
 
