Finalizando cadastro front

--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -28,8 +28,8 @@
 
                 <div class="opcao">
 
-                    <button data-js="btnPF"><p>Pessoa Física</p></button>
-                    <button data-js="btnPJ"><p>Pessoa Jurídica</p></button>
+                    <button id="btnPF"><p>Pessoa Física</p></button>
+                    <button id="btnPJ"><p>Pessoa Jurídica</p></button>
 
                 </div>
 
@@ -39,7 +39,7 @@
                 <h2>Insira seus dados</h2>
 
                 <form action="" method="POST">
-                    <div data-js="form-content--PF" class="form-content form-content--visible">
+                    <div id="form-content--PF" class="form-content form-content--visible">
                         <div class="caixa">
                             <label for="nome"></label>
                             <input type="text" id="nome" name="nome" placeholder="Nome">
@@ -66,7 +66,7 @@
                         <input type="password" id="senha" name="senha" placeholder="Senha">
                     </div>
 
-                    <div data-js="form-content--PJ" class="form-content">
+                    <div id="form-content--PJ" class="form-content">
                         <div class="caixa">
                             <label for="nome"></label>
                             <input type="text" id="nome" name="nome" placeholder="Nome">
