--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -28,8 +28,8 @@
 
                 <div class="opcao">
 
-                    <button id="btnPF"><p>Pessoa Física</p></button>
-                    <button id="btnPJ"><p>Pessoa Jurídica</p></button>
+                    <button id="btnPF" class="btn-form--active"><p>Pessoa Física</p></button>
+                    <button id="btnPJ" class="btn-form"><p>Pessoa Jurídica</p></button>
 
                 </div>
 
